--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ adni_dir = C:/dev/#data/ADNI_Multimodal/dataset/
 h5_cache_dir = c:/dev/alzheimer/h5_cache/
 sets_dir = c:/dev/alzheimer/sets/
 log_dir = c:/dev/alzheimer/logs/
-plots_dir = c:/dev/alzheimer/plots/
+plot_dir = c:/dev/alzheimer/plots/
 
 [augment]
 max_shift = 2
